Version 1.1.0-CVS (?? ??? 2005)
 - Added circle.gif in week view to untimed or all day events
 - Fixed bug 1244652: nonuser admins can't set prefs & assistants
 - Fixed bug  1242309: New created user cannot be deleted
 - Fixed bug  1232617: Views cannot be deleted
 - Fixed bug 1242843: prefered view will not be properly displayed after Log in
 - Implemented RFE 1095248: Error check weekly repeating events
 - Fixed small bug if using 59 minutes for event time.
 - FIxed bug 1225818: Invalid login adds entry to webcal_user_pref
 - Implemented PATCH [ 587965 ] Entry &quot;use end date&quot; auto-selection
 - Added self-registration based on PATCH [1067168] User self registration
 - Modified trailer.php to prevent invalid dates (<1970 && > 2037) from 
   being created in the pulldowm menus.
 - Added 'Load Timezone Data' button to admin.php
 - Fixed bug 1220248: Get an Error using the 'Availability'
 - Fixed bug  1220256: Get Error using the 'Select' button for assistents
 - Added support for multiple public calendars by enabling nonuser calendars
   to act as public calendar.
 - Added ability to use custom header/stylesheet/trailer on a per-user
   basis via user preferences.
 - Added ability to change text "Public Access" in system settings.
 - Added full timezone support including accurate DST calculations
 - Added Auto-install functionality including upgrading from previous
      versions
 - Fixed bug 1233739: Palm Datebook Import - conflicting events
 - Fixed bug 1231076: Send_reminder.php Errors
 - Fixed bug 1228129: WebCalendar ignores "Language" setting
 - Updated phpDoc documentation
 - Added our first unit test (add_duration_test.php)
 - Moved initialization code into new WebCalendar class. Removed
   includes/connect.php because all its code is in
   includes/classes/WebCalendar.class now. Only files that still have
   initialization code are includes/user*.php
 - Fixed bug 1221727: error in documentation for using iframe with upcoming.php